<resources>
    <string name="app_name">App événement</string>
    <string name="addevent">Ajouter un événement</string>
    <string name="welcome">Bienvenue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_new_event">Insérer un événement</string>
    <string name="date">Date &amp; heure</string>
    <string name="insertdate">--/--/----</string>
    <string name="inserthour">--:--</string>
    <string name="title">Titre</string>
    <string name="desc">Desription</string>
    <string name="adres">Adresse</string>
    <string name="add">ajouter</string>
    <string name="doubleinsert">Doublon!</string>
    <string name="description">Description</string>
    <string name="tv_empty">Liste vide</string>
    <string name="delete">Supprimer</string>
    <string name="category">Catégorie</string>
    <string name="editcategory">Editer les catégories</string>
</resources>