<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_new_event"
                android:textSize="30sp"
                android:textColor="@color/app_theme"
                android:gravity="center"
                android:layout_marginBottom="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="25sp"/>

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="25sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_date"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:layout_weight="2"/>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="25sp"/>

                    <ImageButton
                        android:id="@+id/bt_calendar"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_baseline_calendar_today_24"
                        android:backgroundTint="@color/app_theme"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_hour"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:textSize="25sp"
                        android:layout_weight="2"/>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="25sp"/>

                    <ImageButton
                        android:id="@+id/bt_hour"
                        android:layout_width="40dp"
                        android:layout_height="45dp"
                        android:src="@drawable/ic_baseline_access_time_24"
                        android:backgroundTint="@color/app_theme"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/desc"
                        android:textSize="25sp"/>

                    <EditText
                        android:id="@+id/et_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:lines="4"
                        android:gravity="top"
                        android:textSize="25sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adres"
                        android:textSize="25sp"/>

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="25sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/bt_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>